# beauteq_bot

./: Dockerfile  Makefile  base_view.py  booking_system.py  bot.py  config.py  database.py  docker-compose.yml  example.env  function_provider.py  message_processor.py  ollama_client.py  pyproject.toml  simple_rag.py  state_machine.py  view_router.py  views.py
